Add function: Thiết lập công việc.

--- a/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
@@ -49,7 +49,7 @@
                   <li class="dropdown dropdown-submenu" data-menu="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#" data-toggle="dropdown">Công việc</a>
                     <ul class="dropdown-menu">
                       <li data-menu=""><a class="dropdown-item" th:href="@{/task/list}" data-toggle="dropdown">Danh sách công việc</a></li>
-                      <li data-menu=""><a class="dropdown-item" href="#" data-toggle="dropdown">Tạo mới công việc</a></li>
+                      <li data-menu=""><a class="dropdown-item" th:href="@{/task/create-task}" data-toggle="dropdown">Tạo mới công việc</a></li>
                      </ul>
                    </li>
                    
