--- a/web/src/main/webapp/WEB-INF/templates/reminderList.html
+++ b/web/src/main/webapp/WEB-INF/templates/reminderList.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>Thiết lập nhắc nhở</title>
+  <title>Customer Relationship Management</title>
       <!-- COMMON META AND TITLE -->
     <th:block th:include="fragments/common_meta_title"></th:block>
 
