--- a/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
@@ -45,18 +45,21 @@
                   
                   <!-- Chức năng không khác gì Customer>List. Cần thay đổi lại -->
                   <li class="active" data-menu=""><a class="dropdown-item" th:href="@{/customer/list}" data-toggle="dropdown">Tìm kiếm</a></li>  
-                  
-                  <li class="dropdown dropdown-submenu" data-menu="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#" data-toggle="dropdown">Công việc</a>
-                    <ul class="dropdown-menu">
-                      <li data-menu=""><a class="dropdown-item" th:href="@{/task/list}" data-toggle="dropdown">Danh sách công việc</a></li>
-                      <li data-menu=""><a class="dropdown-item" th:href="@{/task/create-task}" data-toggle="dropdown">Tạo mới công việc</a></li>
-                     </ul>
-                   </li>
-                   
                    <li class="active" data-menu=""><a class="dropdown-item" th:href="@{/reminder/list}" data-toggle="dropdown">Thiết lập nhắc nhở</a></li>
                 </ul>
             </li>
-            <li th:if="${#request.userPrincipal}" class="dropdown nav-item" data-menu="dropdown" data-step="3" data-intro="Tạo, tìm kiếm và cập nhật đơn hàng tại mục này.">
+            
+            <li th:if="${#request.userPrincipal}" class="dropdown nav-item active" data-menu="dropdown" data-step="3" data-intro="Quản lý công việc tại đây: tạo mới, xem danh sách, quản lý công việc.">
+                <a class="dropdown-toggle nav-link" href="#" data-toggle="dropdown"><i class="icon-briefcase"></i><span data-i18n="nav.dash.main">Công việc</span></a>
+                <ul class="dropdown-menu">
+                 
+                      <li data-menu=""><a class="dropdown-item" th:href="@{/task/list}" data-toggle="dropdown">Danh sách công việc</a></li>
+                      <li data-menu=""><a class="dropdown-item" th:href="@{/task/create-task}" data-toggle="dropdown">Tạo mới công việc</a></li>
+                </ul>
+            </li>
+            
+            
+            <li th:if="${#request.userPrincipal}" class="dropdown nav-item" data-menu="dropdown" data-step="4" data-intro="Tạo, tìm kiếm và cập nhật đơn hàng tại mục này.">
                 <a class="dropdown-toggle nav-link" href="#" data-toggle="dropdown"><i class="icon-docs"></i><span data-i18n="nav.dash.main">Đơn hàng</span></a>
                 <ul class="dropdown-menu">
                   <li class="active" data-menu=""><a class="dropdown-item" th:href="@{/orders/new}" data-toggle="dropdown">Tạo mới đơn hàng</a></li>
@@ -72,7 +75,7 @@
                   </li>
                 </ul>
             </li>
-            <li th:if="${#request.userPrincipal}" class="dropdown nav-item" data-menu="dropdown" data-step="4" data-intro="Cấu hình loại đơn hàng, loại hàng hóa và trạng thái hàng hóa">
+            <li th:if="${#request.userPrincipal}" class="dropdown nav-item" data-menu="dropdown" data-step="5" data-intro="Cấu hình loại đơn hàng, loại hàng hóa và trạng thái hàng hóa">
                 <a class="dropdown-toggle nav-link" href="#" data-toggle="dropdown"><i class="icon-settings"></i><span data-i18n="nav.dash.main">Cài đặt</span></a>
                    <ul class="dropdown-menu">
                       <li class="active" data-menu=""><a class="dropdown-item" th:href="@{/orders-configuration/status}" data-toggle="dropdown">Cấu hình đơn hàng</a></li>
@@ -81,7 +84,7 @@
                       <li class="active" data-menu=""><a class="dropdown-item" href="#" data-toggle="dropdown">Chung</a></li>
                   </ul>
             </li>
-            <li th:if="${#request.userPrincipal}" class="dropdown nav-item" data-menu="dropdown" data-step="5" data-intro="Danh mục này đang phát triển.">
+            <li th:if="${#request.userPrincipal}" class="dropdown nav-item" data-menu="dropdown" data-step="6" data-intro="Danh mục này đang phát triển.">
             	<a class="dropdown-toggle nav-link" href="#" data-toggle="dropdown"><i class="icon-note"></i><span data-i18n="nav.templates.main">Báo cáo</span></a>
                 <ul class="dropdown-menu">
                    <li class="active" data-menu=""><a class="dropdown-item" href="#" data-toggle="dropdown">Khách hàng</a></li>
@@ -102,7 +105,7 @@
              <!-- <li class="dropdown nav-item"><a class="dropdown-toggle nav-link" href="#" data-toggle="dropdown"><i class="icon-note"></i><span data-i18n="nav.templates.main">About</span></a> -->
              
             <!--  <li class="dropdown nav-item"><a class="dropdown-toggle nav-link" th:href="'https://myworkspace.vn/cas/login?service=http://localhost:8080/crm-web/j_spring_cas_security_check'" data-toggle="dropdown"><i class="icon-note"></i><span data-i18n="nav.templates.main">LOG IN</span></a> -->
-        	 <li class="dropdown nav-item" data-menu="dropdown" data-step="6" data-intro="Hãy đăng nhập tại đây để sử dụng tại khoản">
+        	 <li class="dropdown nav-item" data-menu="dropdown" data-step="7" data-intro="Hãy đăng nhập tại đây để sử dụng tại khoản">
 			   
 			        <!-- Kiểm tra trạng thái đăng nhập -->
 					<a th:if="${#request.userPrincipal}" style="color: green; font-weight: bold;" href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
