Update code at last stage.

--- a/web/src/main/webapp/WEB-INF/templates/fragments/frm_formCustomerWithValue.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/frm_formCustomerWithValue.html
@@ -183,7 +183,7 @@
  	    	 titleModal = 'Quản lý ngành nghề';
  	     }
  	     else{
- 	    	 titleModal = 'Quản lý trạng thái người dùng';
+ 	    	 titleModal = 'Quản lý trạng thái khách hàng';
  	     }
 	   	     document.getElementById('responsibleModalLabel').innerText = titleModal;
 	   	  	 loadTableData(event.target.value);
